# PatchNorm

./: .gitignore  CMakeLists.txt  Makefile  README.md  convert.cpp  patchnorm.cpp  patchnorm_cpu.cpp  patchnorm_cpu.hpp  patchnorm_cuda.cu  patchnorm_cuda.h
